pamc/src/tests/sample_code/should_fail/illegal_recursion/rec_fun_right_index_wrong_label.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let foo = fun f(~-a: Nat, ~b: Nat): Nat {
    match a {
        .O => Nat.O,
        .S(a') => f(b: a', :a),
    }
};
